# EEGSpectrumTool

./: .gitignore  PRODUCT.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: streamlit_app.py
docs/: ARCHITECTURE.md  CONCLUSION.md  FOR_JUDGES.md  LIMITATIONS.md  PRESENTATION.md  REFERENCES.md
samples/: README.md  synthetic_demo_adhd_eeg.fif  synthetic_demo_eeg.fif  synthetic_muse_adhd_demo.csv  synthetic_muse_demo.csv
scripts/: adult_reference.py  download_adhd.py  improve_model.py  m0_reconnaissance.py  m0_report.py  m1_verify.py  m2_pipeline.py  m3_gate1.py  m5_eval_monk.py  make_synthetic_demo.py  make_synthetic_muse.py  quicklook.py  train_model.py
src/eeg_spectrum/: __init__.py  clean.py  config.py  features.py  harmonize.py  io.py  microstates.py  muse.py  pipeline.py  report.py  score.py  subtypes.py
tests/: test_determinism.py  test_features.py  test_harmonize.py  test_smoke.py
