[project]
name = "eeg-spectrum"
version = "0.1.0"
description = "Place a resting-state EEG on a state-stability axis from microstate dynamics."
requires-python = ">=3.10"
dependencies = [
    "mne>=1.7",
    "pycrostates>=0.5",          # MNE-endorsed microstate analysis
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
data = [
    "kagglehub>=0.2",            # programmatic Kaggle dataset download
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
